...
            android:src="@drawable/btn_ranking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_game_button" />

        <ImageButton
            android:id="@+id/graphic_button"
            android:layout_width="192dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/btn_graficos"
...
