...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.564" />

    <Switch
        android:id="@+id/hardmode_switch"
        android:layout_width="153dp"
        android:layout_height="30dp"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="129dp"
...
